--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		integrity="sha512-pgK6Wo8doipc/IPQ0ilH3b47ww01345nR9ud1/6Qp0n+lQlEW9zuw6JhysRcUpBY4yKuVZjn1MAkDxbnncuGsQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 
+	<script src="src/colourSpace/ColourSpace.js" defer></script>
+
 	<script type="text/javascript" src="src/managers/processManager.js" defer></script>
 
 	<script type="text/javascript" src="src/managers/domManager.js" defer></script>
