--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 
 	<script src="src/maths/matrix.js" defer></script>
 	<script src="src/colourSpace/ColourSpace.js" defer></script>
+	<script src="src/colourSpace/ColourPicker.js" defer></script>
 
-	<script type="text/javascript" src="src/managers/processManager.js" defer></script>
+	<script src="src/managers/processManager.js" defer></script>
 
-	<script type="text/javascript" src="src/managers/domManager.js" defer></script>
+	<script src="src/managers/domManager.js" defer></script>
 
-	<script type="text/javascript" src="src/managers/mainManager.js" defer></script>
+	<script src="src/managers/mainManager.js" defer></script>
 
-	<script type="text/javascript" src="src/sketch.js" defer></script>
+	<script src="src/sketch.js" defer></script>
 </head>
 <body>
 	<main></main>
