Add direct Linear RGB to Linear LMS conversion

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<script src="src/maths/matrix.js" defer></script>
 	<script src="src/colourSpace/ColourSpace.js" defer></script>
 
-	<script src="src/colourSpace/ColourPicker.min.js" defer></script>
-	<!-- <script src="src/colourSpace/ColourPicker.js" defer></script> -->
+	<!-- <script src="src/colourSpace/ColourPicker.min.js" defer></script> -->
+	<script src="src/colourSpace/ColourPicker.js" defer></script>
 
 	<script src="src/managers/processManager.js" defer></script>
 
