Use literals for better performance

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 
 	<script src="src/maths/matrix.js" defer></script>
+	<script src="src/maths/maths.js" defer></script>
 	<script src="src/colourSpace/ColourSpace.js" defer></script>
 
 	<!-- <script src="src/colourSpace/ColourPicker.min.js" defer></script> -->
